Replaces javax.xml.bind.DatatypeConverter with apache commons Base64